# ao3-reader

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  bundle.sh  dist.sh  download.sh
.cargo/: config.toml
.github/workflows/: release.yml
ao3offline/: ao3login.sh  ao3offline.sh  jq  test-commands.sh
ao3offline/lib/: libsqlite3.so.0
ao3reader/: ao3reader.sh
ao3reader/hyphenation-patterns/: af.standard.bincode  be.standard.bincode  bg.standard.bincode  ca.standard.bincode  cop.standard.bincode  cs.standard.bincode  cu.standard.bincode  cy.standard.bincode  da.standard.bincode  de-1901.standard.bincode  de-1996.standard.bincode  de-ch-1901.standard.bincode  el-monoton.standard.bincode  el-polyton.standard.bincode  en-gb.standard.bincode  en-us.standard.bincode  eo.standard.bincode  es.standard.bincode  et.standard.bincode  fr.standard.bincode  fur.standard.bincode  ga.standard.bincode  gl.standard.bincode  grc.standard.bincode  hr.standard.bincode  hsb.standard.bincode  hu.standard.bincode  ia.standard.bincode  id.standard.bincode  is.standard.bincode  it.standard.bincode  ka.standard.bincode  (+37 more)
containers/: development.Dockerfile  development.sh
contrib/: Settings-sample.toml  unicode_test.epub
crates/ao3reader/: Cargo.toml
crates/ao3reader/src/: app.rs  main.rs
crates/emulator/: Cargo.toml
crates/emulator/src/: main.rs
crates/plato/: Cargo.toml
crates/plato/src/: app.rs
doc/: BUILD.md
features/: README.md  browseWorks.feature  devTools.feature  displaySettings.feature  homePage.feature  viewWork.feature
src/: ao3_metadata.rs  app.rs  emulator.rs  geom.rs  helpers.rs  http.rs  library.rs  main.rs  metadata.rs
(+170 files in other folders)
