[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>", "momijizukamori <momijizukamori@gmail.com>"]
name = "ao3reader"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "ao3reader"
path = "src/main.rs"

[dependencies]
ao3reader-core = { path = "../core" }

[dependencies.reqwest]
version = "0.11.9"
default-features = false
features = ["rustls-tls","json", "blocking", "cookies"]