[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>"]
name = "emulator"
version = "0.9.42"
edition = "2021"

[[bin]]
name = "plato-emulator"
path = "src/main.rs"

[dependencies]
plato-core = { path = "../core" }
sdl2 = "0.36.0"

[dependencies.reqwest]
version = "0.11.9"
default-features = false
features = ["rustls-tls","json", "blocking", "cookies"]