[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>"]
name = "emulator"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "ao3reader-emulator"
path = "src/main.rs"

[dependencies]
ao3reader-core = { path = "../core" }
sdl2 = "0.36.0"

[dependencies.reqwest]
version = "0.11.9"
default-features = false
features = ["rustls-tls","json", "blocking", "cookies"]