[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>"]
name = "plato"
version = "0.9.38"
edition = "2021"

[[bin]]
name = "plato"
path = "src/main.rs"

[dependencies]
plato-core = { path = "../core" }

[dependencies.reqwest]
version = "0.11.9"
default-features = false
features = ["rustls-tls","json", "blocking", "cookies"]